Edited some test